{
    "name": "PlayerControls1",
    "maps": [
        {
            "name": "Player",
            "id": "3b05e348-dc89-4eff-afb2-4b4d7f231aae",
            "actions": [
                {
                    "name": "Smile",
                    "type": "Value",
                    "id": "27d6c523-e3af-4437-b01a-7b59bec78c12",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeanLeft",
                    "type": "Button",
                    "id": "5384e209-7f05-401a-8512-8a0cbd970f45",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeanRight",
                    "type": "Button",
                    "id": "8aa4a6c6-f7fd-4d66-a938-a44f1158e69f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeanForward",
                    "type": "Button",
                    "id": "82f7188d-2344-4137-8e9e-01dae54b957c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeanBackward",
                    "type": "Button",
                    "id": "60798333-a513-437c-bc12-d44766892343",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "085975d5-4495-4e2e-88cb-16cbeacbbef3",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Smile",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5483133a-9e0b-4f25-80d0-13836e045cd5",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeanLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7e7f27ba-ef36-41c3-ac43-04dc9cf8beff",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeanRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "52610541-69ec-487f-bdfd-21aba72ce5a4",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeanForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c45327ee-5f06-4cdc-a88b-a2a30a6deeca",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeanBackward",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}